<resources>
    <string name="empty" />

    <string name="app_name">Nong Sukjai</string>

    <string name="label_welcome_title_en">Welcome to CENTRAL FOOD HALL</string>
    <string name="label_welcome_title_th">สวัสดีค่ะ มีอะไรให้สุขใจช่วยมั้ยคะ?</string>
    <string name="label_welcome_subtitle_en">How may I Help You?</string>

    <string name="label_check_in_content_en"><b>SCAN</b>\nthe QR code to check-in</string>
    <string name="label_check_in_content_th">กรุณาสแกนคิวอาร์โค้ดเพื่อเช็คอินค่ะ</string>
    <string name="label_auto_close_in">Closing in %1$s Seconds</string>

    <string name="label_scan_promotion_en"><b>SCAN</b>\nto view our promotions</string>
    <string name="label_scan_promotion_th">สแกนเพื่อดูโปรโมชั่นสุดพิเศษค่ะ</string>

    <string name="label_follow_me_en">Please follow me to</string>
    <string name="label_follow_me_th">กรุณาเดินตามสุขใจเพื่อไปโซน %1$s</string>

    <string name="label_arrived_en">We have arrived at %1$s, what would you like to do next?</string>
    <string name="label_arrived_th">เรามาถึงโซน %1$s แล้วนะคะ คุณต้องการทำอะไรต่อดีค่ะ?</string>
    <string name="label_returning_in">Returning in %1$s Seconds</string>

    <string name="label_see_you_en">See you again at the Entrance</string>
    <string name="label_see_you_th">แล้วพบกันอีกครั้งที่บริเวณทางเข้านะคะ</string>

    <string name="label_contact_staff_content_th">คุณต้องการให้สุขใจช่วยติดต่อพนักงานให้มั้ยคะ?\nกรุณาแตะรูปด้านล่างได้เลยค่ะ\n029371716 กด 0</string>
    <string name="label_contact_staff_content_en"><b>Need help?</b>\nYou can tap on below contact for our staff to assist you on a video call</string>

    <string name="title_admin_panel_en">Admin Panel</string>
    <string name="title_admin_panel_th">แผงธุรการ</string>
    <string name="title_delays_en">Delays</string>
    <string name="title_delays_th">ความล่าช้า</string>
    <string name="title_qr_code_en">QR Code</string>
    <string name="title_qr_code_th">คิวอาร์โค้ด</string>
    <string name="title_tts_en">Text-to-Speech</string>
    <string name="title_tts_th">ข้อความเป็นคำพูด</string>
    <string name="title_general_en">General</string>
    <string name="title_general_th">ทั่วไป</string>
    <string name="title_staff_en">Staffs</string>
    <string name="title_staff_th">พนักงาน</string>
    <string name="title_nav_location_en">Navigation Locations</string>
    <string name="title_nav_location_th">ตำแหน่งการนำทาง</string>

    <string name="title_store_navigation_en">Store Navigation</string>
    <string name="title_store_navigation_th">แผนผังโซนต่างๆ ในร้าน</string>
    <string name="title_navigation_en">Navigation</string>
    <string name="title_navigation_th">การนำทาง</string>
    <string name="title_promotions_en">Promotions</string>
    <string name="title_promotions_th">โปรโมชั่น</string>
    <string name="title_contact_staff_en">Contact Staff</string>
    <string name="title_contact_staff_th">ติดต่อพนักงาน</string>

    <string name="button_store_navigation">Store Navigation</string>
    <string name="button_contact_staff">Contact Us</string>
    <string name="button_play_promotions">Promotions</string>
    <string name="button_next_zone">Go to the Next Zone</string>
    <string name="button_other_task">View Other Tasks</string>
    <string name="button_send_back">Send Robot Back</string>
    <string name="button_wait">Wait</string>

    <string name="dialog_content_auto_return">Would you like to explore other functions? Or else I will be going back to Entrance in %d seconds</string>

    <string name="content_desc_qr_promotion">QR Code to see promotions</string>
    <string name="content_desc_qr_thai_chana">QR Code to check in via thai chana</string>
    <string name="content_desc_thai_chana_logo">Thai chana logo</string>
    <string name="content_desc_food_hall_logo">Central food hall logo</string>
    <string name="content_desc_header_image">Header image</string>

    <string name="transition_name_video">video_%1$s</string>
    <string name="transition_name_video_details">video details</string>

    <string name="snack_bar_settings_permission_denied">You denied the permission! Please restart the app for full functionality</string>

    <string name="tts_complete_greeting">สวัสดีค่ะ ยินดีต้อนรับสู่เซ็นทรัล ฟู้ด ฮอลล์ คุณมีอะไรให้สุขใจช่วยเหลือไหมคะ?</string>
    <string name="tts_partial_greeting">คุณมีอะไรให้สุขใจช่วยอีกมั้ยคะ? สุขใจยินดีช่วยเหลือคุณเสมอค่ะ</string>

    <string name="tts_check_in">กรุณาสแกนคิวอาร์โค้ดเพื่อเช็คอินก่อนเข้าร้านค่ะ ขอบคุณค่ะ</string>
    <string name="tts_promotion">กรุณาสแกนคิวอาร์โค้ดเพื่อดูโปรโมชั่นสุดพิเศษของเราค่ะ</string>
    <string name="tts_map">สนใจไปช็อปที่โซนไหนดีคะ กรุณาเลือกได้เลยค่ะ</string>
    <string name="tts_map_revisit">ุณต้องการไปช็อปอะไรต่อดีคะ? กรุณาเลือกโซนที่คุณต้องการไปได้เลยค่ะ</string>
    <string name="tts_navigating">กรุณาเดินตามสุขใจมานะคะ เราจะไปโซน %1$s กันค่ะ</string>
    <string name="tts_excuse_me">ขอโทษนะคะคุณลูกค้า ขอทางหน่อยค่า</string>
    <string name="tts_path_plan">รอหน่อยนะคะ สุขใจกำลังคิดอยู่ค่ะ</string>
    <string name="tts_arrived">ขอบคุณค่ะ เรามาถึงโซน %1$s แล้วนะคะ คุณมีอะไรให้สุขใจช่วยต่อมั้ยคะ?</string>
    <string name="tts_no_activity">คุณต้องการจะทำอะไรต่ออีกไหมคะ? ถ้าไม่มีแล้ว สุขใจขอตัวกลับไปที่ Entrance ใน %d วินาทีค่ะ</string>

    <string name="tts_returning">เชิญช็อปให้สนุกนะคะ แล้วพบกับสุขใจอีกครั้งที่บริเวณ %1$s ค่ะ</string>

    <string name="tts_contact_staff">หากคุณต้องการความช่วยเหลือและพูดคุยกับพนักงานของเรา กรุณาแตะที่รูปด้านล่างนะคะ</string>
</resources>