<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="fragment"
            type="com.robosolutions.temixtopsmarket.ui.location.ArrivedFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:transitionGroup="true"
        tools:context=".ui.location.ArrivedFragment">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/labelArrivedEn"
            style="@style/NormalTextEn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{@string/label_arrived_en(fragment.args.location)}"
            app:layout_constraintBottom_toTopOf="@id/labelArrivedTh"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/label_arrived_en" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/labelArrivedTh"
            style="@style/NormalTextTh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{@string/label_arrived_th(fragment.args.location)}"
            app:layout_constraintBottom_toTopOf="@id/buttonNextZone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/labelArrivedEn"
            tools:text="@string/label_arrived_th" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonNextZone"
            style="@style/ArrivedScreenButton"
            android:onClick="@{() -> fragment.requireActivity().onBackPressed()}"
            android:text="@string/button_next_zone"
            app:icon="@drawable/ic_navigation"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/buttonOtherTask"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/labelArrivedTh" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonOtherTask"
            style="@style/ArrivedScreenButton"
            android:onClick="@{v -> fragment.onViewOtherTask(v)}"
            android:text="@string/button_other_task"
            app:icon="@drawable/ic_task"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/buttonSendBack"
            app:layout_constraintStart_toEndOf="@id/buttonNextZone"
            app:layout_constraintTop_toBottomOf="@id/labelArrivedTh" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonSendBack"
            style="@style/ArrivedScreenButton"
            android:onClick="@{v -> fragment.onSendRobotBack(v)}"
            android:text="@string/button_send_back"
            app:icon="@drawable/ic_return"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/buttonOtherTask"
            app:layout_constraintTop_toBottomOf="@id/labelArrivedTh" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>